2009-12-05  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am: Set dependency of *.texi files on
	munge-texi source code rather than executable.

2009-12-04  Rik <octave@nomad.inbox5.com>

	* interpreter/images.awk: Revert to using Ghostscript for documentation 
	pdf image creation rather than Octave.

2009-12-04  Rik <octave@nomad.inbox5.com>

	* Makefile.am, interpreter/Makefile.am, liboctave/Makefile.am: remove 
	  lingering configuration support for conf.texi
	* liboctave/Makefile.am: distribute .texi files

2009-12-04  Rik <octave@nomad.inbox5.com>

	* interpreter/geometryimages.m, interpreter/interpimages.m,
	  interpreter/sparseimages.m, interpreter/plotimages.m: 
	  Switch to color output for PostScript documentation images

2009-12-04  Rik <octave@nomad.inbox5.com>

	* interpreter/geometryimages.m, interpreter/interpimages.m,
	  interpreter/sparseimages.m, interpreter/plotimages.m: 
	  Set default paperorientation to landscape to stop warning message

2009-12-04  Ben Abbott <bpabbott@mac.com>

	* interpreter/geometryimages.m, interpreter/interpimages.m,
	  interpreter/sparseimages.m: Set default papersize to the desired imagesize

2009-12-04  John W. Eaton  <jwe@octave.org>

	* interpreter/images.awk: Emit rules to copy PNG files to
	octave.html directory once it is created.
	* interpreter/Makefile.am (all-local): Depend on $(HTMLDIR_IMAGES).
	(IMAGES): Include $(HTMLDIR_IMAGES) in the list.

2009-12-04  John W. Eaton  <jwe@octave.org>

	* interpreter/octave.texi: Include version.texi instead of conf.texi.
	* interpreter/Makefile.am (../conf.texi): Delete rule.
	(octave_TEXINFOS): Delete ../conf.texi from the list.
	($(srcdir)/octave.info octave.dvi octave.pdf octave.html):
	Remove duplicate $(octave_TEXINFOS) dependency.
	Depend on $(srcdir)/version.texi.

	* liboctave/liboctave.texi: Include version.texi instead of conf.texi.
	* liboctave/Makefile.am (../conf.texi): Delete rule.
	(dist_liboctave_TEXINFOS): Delete ../conf.texi from the list.